--- a/views/config_booking_activities_notifications_manager_templates.erb
+++ b/views/config_booking_activities_notifications_manager_templates.erb
@@ -1,5 +1,5 @@
 <div class="top-navigation-bar">
-  <h2 class="entity-title"><%=t.booking_settings.form.activities_manager_notification_templates%></h2>
+  <h2 class="entity-title"><%=t.booking_settings.notifications.activities_manager_notification_templates%></h2>
 </div>
 <div class="admin_content_wrapper"  style="background-color: #f5f5f5; margin: 0">
   <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000"></div>
@@ -12,7 +12,7 @@
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
-            <h3 class="block-title"><%=t.booking_configuration_templates.email_manager_request_received%></h3>
+            <h3 class="block-title"><%=t.booking_settings.notifications.email_manager_request_received%></h3>
           </div>
           <div class="block-content block-content-narrow">
             <form name="templates" action="/api/templates" method="PUT"
@@ -32,7 +32,7 @@
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
-            <h3 class="block-title"><%=t.booking_configuration_templates.email_manager_confirmation%></h3>
+            <h3 class="block-title"><%=t.booking_settings.notifications.email_manager_confirmation%></h3>
           </div>
           <div class="block-content block-content-narrow">
             <form name="templates" action="/api/templates" method="PUT"
@@ -52,7 +52,7 @@
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
-            <h3 class="block-title"><%=t.booking_configuration_templates.email_manager_payment_request_received%></h3>
+            <h3 class="block-title"><%=t.booking_settings.notifications.email_manager_payment_request_received%></h3>
           </div>
           <div class="block-content block-content-narrow">
             <form name="templates" action="/api/templates" method="PUT"
