--- a/views/_booking_pickup_return_places_editor.erb
+++ b/views/_booking_pickup_return_places_editor.erb
@@ -104,7 +104,7 @@
             <button data-dismiss="modal" type="button"><i class="si si-close"></i></button>
           </li>
         </ul>
-        <h3 class="modal-title">Traducción</h3>
+        <h3 class="modal-title"><%= t.booking_places_management.form.translation %></h3>
       </div>
       <div class="modal-body">
       </div>
