--- a/views/config_booking_frontend_setup.erb
+++ b/views/config_booking_frontend_setup.erb
@@ -1,5 +1,5 @@
 <div class="top-navigation-bar">
-  <h2 class="entity-title"><%=t.booking_front_end_theme.title%></h2>
+  <h2 class="entity-title"><%=t.reservation_website_settings.title%></h2>
 </div>
 <div class="admin_content_wrapper"  style="background-color: #f5f5f5; margin: 0">
 
@@ -11,14 +11,14 @@
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
-            <h3 class="block-title">Datos generales</h3>
+            <h3 class="block-title"><%=t.reservation_website_settings.activities_menu_group%></h3>
           </div>
           <div class="block-content block-content-narrow">
             <form name="variables" action="/api/variables" method="PUT"
                   data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
               <%= render_variable_checkbox_boolean('booking.frontend.activities_menu',
-                                                   t.booking_settings.form.frontend.activities_menu) %>
-              <p class="text-muted "><%=t.booking_settings.form.frontend.activities_menu_description%></p>
+                                                   t.reservation_website_settings.activities_menu) %>
+              <p class="text-muted "><%=t.reservation_website_settings.activities_menu_description%></p>
               <div class="form-group">
                 <div class="col-xs-12">
                   <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
