--- a/views/config_booking_payment.erb
+++ b/views/config_booking_payment.erb
@@ -1,38 +1,39 @@
 <div class="top-navigation-bar">
-  <h2 class="entity-title"><%=t.booking_settings.form.online_payment%></h2>
+  <h2 class="entity-title"><%=t.booking_settings.payment.title%></h2>
 </div>
 
 <div class="admin_content_wrapper" style="background-color: #f5f5f5; margin: 0">
   <br>
   <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000"></div>
+  <!-- Renting -->
   <% if booking_renting %>
   <div class="row">
     <div class="col-sm-12 col-md-10 col-md-offset-1">
       <div class="block ">
         <div class="block-header bg-gray-lighter">
-          <h3 class="block-title"><%=t.booking_settings.form.rent_group%></h3>
+          <h3 class="block-title"><%=t.booking_settings.payment.renting_group%></h3>
         </div>
         <div class="block-content block-content-narrow">
           <form name="variables" action="/api/variables" method="PUT"
                 data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
-            <%= render_variable_checkbox_boolean('booking.payment', t.booking_settings.form.payment) %>
-            <p class="less_contrast_text"><%=t.booking_settings.form.payment_description%></p>
+            <%= render_variable_checkbox_boolean('booking.payment', t.booking_settings.payment.payment) %>
+            <p class="less_contrast_text"><%=t.booking_settings.payment.payment_description%></p>
             <hr>
             <div id="renting_payment_settings">
               <%= render_variable_select('booking.payment_amount_setup',
-                                         t.booking_settings.form.pay_group.title,
-                                         {deposit: t.booking_settings.form.pay_group.deposit,
-                                          total: t.booking_settings.form.pay_group.total,
-                                          deposit_and_total: t.booking_settings.form.pay_group.deposit_and_total}) %>
+                                         t.booking_settings.payment.pay_group.title,
+                                         {deposit: t.booking_settings.payment.pay_group.deposit,
+                                          total: t.booking_settings.payment.pay_group.total,
+                                          deposit_and_total: t.booking_settings.payment.pay_group.deposit_and_total}) %>
               <div id="renting_deposit_settings">
-                <%= render_variable_input_text('booking.deposit', t.booking_settings.form.deposit, 2, 2) %>
-                <p class="less_contrast_text"><%=t.booking_settings.form.deposit_description%></p>
-                <%= render_variable_checkbox_boolean('booking.allow_pending_payment', t.booking_settings.form.pay_group.allow_pending_payment) %>
-                <p class="less_contrast_text"><%=t.booking_settings.form.pay_group.allow_pending_payment_description%></p>
+                <%= render_variable_input_text('booking.deposit', t.booking_settings.payment.deposit, 2, 2) %>
+                <p class="less_contrast_text"><%=t.booking_settings.payment.deposit_description%></p>
+                <%= render_variable_checkbox_boolean('booking.allow_pending_payment', t.booking_settings.payment.pay_group.allow_pending_payment) %>
+                <p class="less_contrast_text"><%=t.booking_settings.payment.pay_group.allow_pending_payment_description%></p>
               </div>
               <hr>
-              <%= render_variable_input_text('booking.payment_cadence', t.booking_settings.form.payment_cadence, 2, 2) %>
-              <p class="less_contrast_text"><%=t.booking_settings.form.payment_cadence_description%></p>
+              <%= render_variable_input_text('booking.payment_cadence', t.booking_settings.payment.payment_cadence, 2, 2) %>
+              <p class="less_contrast_text"><%=t.booking_settings.payment.payment_cadence_description%></p>
             </div>
             <div class="form-group">
               <div class="col-xs-12">
@@ -45,33 +46,34 @@
     </div>
   </div>
   <% end %>
+  <!-- Activities -->
   <% if booking_activities %>
     <div class="row">
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
-            <h3 class="block-title"><%=t.booking_settings.form.activities_group%></h3>
+            <h3 class="block-title"><%=t.booking_settings.payment.activities_group%></h3>
           </div>
           <div class="block-content block-content-narrow">
             <form name="variables" action="/api/variables" method="PUT"
                   data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
-              <%= render_variable_checkbox_boolean('order.payment', t.booking_settings.form.activities_payment) %>
-              <p class="less_contrast_text"><%=t.booking_settings.form.payment_description%></p>
+              <%= render_variable_checkbox_boolean('order.payment', t.booking_settings.payment.activities_payment) %>
+              <p class="less_contrast_text"><%=t.booking_settings.payment.payment_description%></p>
               <hr>
               <div id="order_payment_settings">
                 <%= render_variable_select('order.payment_amount_setup',
-                                           t.booking_settings.form.pay_group.title,
-                                           {deposit: t.booking_settings.form.pay_group.deposit,
-                                            total: t.booking_settings.form.pay_group.total}) %>
+                                           t.booking_settings.payment.pay_group.title,
+                                           {deposit: t.booking_settings.payment.pay_group.deposit,
+                                            total: t.booking_settings.payment.pay_group.total}) %>
                 <div id="order_deposit_settings">
-                  <%= render_variable_input_text('order.deposit', t.booking_settings.form.deposit, 2, 2) %>
-                  <p class="less_contrast_text"><%=t.booking_settings.form.deposit_description%></p>
-                  <%= render_variable_checkbox_boolean('order.allow_pending_payment', t.booking_settings.form.pay_group.allow_pending_payment) %>
-                  <p class="less_contrast_text"><%=t.booking_settings.form.pay_group.allow_pending_payment_description%></p>
+                  <%= render_variable_input_text('order.deposit', t.booking_settings.payment.deposit, 2, 2) %>
+                  <p class="less_contrast_text"><%=t.booking_settings.payment.deposit_description%></p>
+                  <%= render_variable_checkbox_boolean('order.allow_pending_payment', t.booking_settings.payment.pay_group.allow_pending_payment) %>
+                  <p class="less_contrast_text"><%=t.booking_settings.payment.pay_group.allow_pending_payment_description%></p>
                 </div>
                 <hr>
-                <%= render_variable_input_text('order.payment_cadence', t.booking_settings.form.activities_payment_cadence, 2, 2) %>
-                <p class="less_contrast_text"><%=t.booking_settings.form.activities_payment_cadence_description%></p>
+                <%= render_variable_input_text('order.payment_cadence', t.booking_settings.payment.activities_payment_cadence, 2, 2) %>
+                <p class="less_contrast_text"><%=t.booking_settings.payment.activities_payment_cadence_description%></p>
               </div>
               <div class="form-group">
                 <div class="col-xs-12">
