--- a/views/config_booking_renting_notifications_customer_templates.erb
+++ b/views/config_booking_renting_notifications_customer_templates.erb
@@ -1,5 +1,5 @@
 <div class="top-navigation-bar">
-  <h2 class="entity-title"><%=t.booking_settings.form.renting_customer_notification_templates%></h2>
+  <h2 class="entity-title"><%=t.booking_settings.notifications.renting_customer_notification_templates%></h2>
 </div>
 <div class="admin_content_wrapper"  style="background-color: #f5f5f5; margin: 0">
   <div data-alerts="alerts" data-titles="{'success':'<%=t.entitymanagement.success%>','warning':'<%=t.entitymanagement.warning%>','error':'<%=t.entitymanagement.error%>'}" data-fade="10000"></div>
@@ -16,13 +16,13 @@
               <a id="request_notification" href="#btabs-static-request"><%=t.booking_configuration_templates.email_customer_request_received%></a>
             </li>
             <li class="">
-              <a id="confirmation_notification" href="#btabs-static-confirmation"><%=t.booking_configuration_templates.email_customer_reservation_confirmed%></a>
+              <a id="confirmation_notification" href="#btabs-static-confirmation"><%=t.booking_settings.notifications.email_customer_reservation_confirmed%></a>
             </li>
             <li class="">
-              <a id="request_payment_notification" href="#btabs-static-payment-request"><%=t.booking_configuration_templates.email_customer_payment_request_received%></a>
+              <a id="request_payment_notification" href="#btabs-static-payment-request"><%=t.booking_settings.notifications.email_customer_payment_request_received%></a>
             </li>
             <li class="">
-              <a id="payment_enabled_notification" href="#btabs-static-payment-enabled"><%=t.booking_configuration_templates.email_customer_payment_enabled%></a>
+              <a id="payment_enabled_notification" href="#btabs-static-payment-enabled"><%=t.booking_settings.notifications.email_customer_payment_enabled%></a>
             </li>
           </ul>
           <div class="block-content tab-content">
@@ -31,7 +31,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title">Plantilla</h3>
+                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -51,7 +51,7 @@
                   <div class="col-sm-12 col-md-12 col-lg-12">
                     <div class="block block-bordered">
                       <div class="block-header bg-gray-lighter">
-                        <h3 class="block-title">Traducciones</h3>
+                        <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
                       </div>
                       <div class="block-content block-content-narrow">
                         <div id="request_notification_container">
@@ -67,7 +67,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title">Plantilla</h3>
+                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -83,7 +83,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title">Traducciones</h3>
+                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="confirmation_notification_container">
@@ -104,7 +104,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title">Plantilla</h3>
+                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -120,7 +120,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title">Traducciones</h3>
+                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="request_pay_now_notification_container">
@@ -140,7 +140,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12">
                   <div class="block block-bordered">
                     <div class="block-header bg-gray-lighter">
-                      <h3 class="block-title">Plantilla</h3>
+                      <h3 class="block-title"><%=t.booking_configuration_templates.template%></h3>
                     </div>
                     <div class="block-content block-content-narrow">
                       <form name="templates" action="/api/templates" method="PUT"
@@ -156,7 +156,7 @@
                           <div class="col-sm-12 col-md-12 col-lg-12">
                             <div class="block block-bordered">
                               <div class="block-header bg-gray-lighter">
-                                <h3 class="block-title">Traducciones</h3>
+                                <h3 class="block-title"><%=t.booking_configuration_templates.translations%></h3>
                               </div>
                               <div class="block-content block-content-narrow">
                                 <div id="pay_enabled_notification_container">
