--- a/views/config_booking_advanced.erb
+++ b/views/config_booking_advanced.erb
@@ -45,6 +45,31 @@
       <div class="col-sm-12 col-md-10 col-md-offset-1">
         <div class="block ">
           <div class="block-header bg-gray-lighter">
+            <h3 class="block-title"><%=t.booking_settings.advanced.automatic_confirmation.title%></h3>
+          </div>
+          <div class="block-content block-content-narrow">
+            <form name="variables" action="/api/variables" method="PUT"
+                  data-remote="ajax" data-remote-method="PUT" class="form-horizontal">
+              <%= render_variable_checkbox_boolean('booking.automatic_confirm_web_reservation_request',
+                                                   t.booking_settings.advanced.automatic_confirmation.automatically_confirm_web_request) %>
+              <p class="text-muted"><%=t.booking_settings.advanced.automatic_confirmation.automatically_confirm_web_request_description%></p>
+              <%= render_variable_checkbox_boolean('booking.automatic_confirm_backoffice_reservation_request',
+                                                   t.booking_settings.advanced.automatic_confirmation.automatically_confirm_backoffice_request) %>
+              <p class="text-muted"><%=t.booking_settings.advanced.automatic_confirmation.automatically_confirm_backoffice_request_description%></p>
+              <div class="form-group">
+                <div class="col-xs-12">
+                  <button class="button btn btn-sm btn-primary pull-right" type="submit"><i class="fa fa-save push-5-r"></i> <%=t.entitymanagement.update%></button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-10 col-md-offset-1">
+        <div class="block ">
+          <div class="block-header bg-gray-lighter">
             <h3 class="block-title"><%=t.booking_settings.advanced.planning_resources%></h3>
           </div>
           <div class="block-content block-content-narrow">
@@ -56,8 +81,16 @@
               <p class="less_contrast_text "><%=t.booking_settings.advanced.assignation.allow_different_category_description%></p>
               <%= render_variable_checkbox_boolean('booking.assignation.allow_busy_resource', t.booking_settings.advanced.assignation.allow_busy_resource) %>
               <p class="less_contrast_text "><%=t.booking_settings.advanced.assignation.allow_busy_resource_description%></p>
+
+              <%= render_variable_checkbox_boolean('booking.assignation.automatic_resource_assignation_on_web_request', t.booking_settings.advanced.assignation.automatic_resource_assignation_web_request) %>
+              <p class="less_contrast_text "><%=t.booking_settings.advanced.assignation.automatic_resource_assignation_web_request_description%></p>
+              
+              <%= render_variable_checkbox_boolean('booking.assignation.automatic_resource_assignation_on_backoffice_request', t.booking_settings.advanced.assignation.automatic_resource_assignation_backoffice_request) %>
+              <p class="less_contrast_text "><%=t.booking_settings.advanced.assignation.automatic_resource_assignation_backoffice_request_description%></p>
+              
               <%= render_variable_checkbox_boolean('booking.assignation.automatic_resource_assignation', t.booking_settings.advanced.assignation.automatic_resource_assignation) %>
               <p class="less_contrast_text "><%=t.booking_settings.advanced.assignation.automatic_resource_assignation_description%></p>
+              
               <%= render_variable_select('booking.assignation.planning_style', t.booking_settings.advanced.assignation.planning_style.title, {compact:  t.booking_settings.form.assignation.planning_style.compact, extended:  t.booking_settings.advanced.assignation.planning_style.extended}) %>
               <%= render_variable_input_text('booking.assignation_hours_return_pickup', t.booking_settings.advanced.assignation.assignation_hours_return_pickup, 2, 2) %>
               <p class="less_contrast_text "><%=t.booking_settings.advanced.assignation.assignation_hours_return_pickup_description%></p>
